# ug

./: .env.example  .gitignore  Agent.md  Agents.md  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: CHAT.md  CONFIGURATION.md  EMBEDDING-BACKENDS.md  GRAPH-STORAGE.md  MIGRATION-OVERGRAPH.md  MULTI-DEST-PLAN.md  MULTI-DEST.md  PROGRESS.md  QUICKSTART.md  REQUIREMENT.md  SLIDES-BRIEF.md  VISUALIZATION-FEATURES.md  VISUALIZATION.md  WEB-SERVE.md  architecture.html  kb-req.md  mcp.md  neo4j-cred.txt  raw-tree-sitter-output-sample.json
docs/dev/: EVALUATION-2026-07-23.md  REFACTOR-SESSION-2026-07-21.md  notes.md
docs/samples/: graph.json  java.graph.json  md.graph.json  ts.graph.json
native/: Cargo.toml  README.md  UG-README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  tauri.conf.json
native/icons/: icon.icns
native/scripts/: copy-bin.mjs
native/src/: agent_tools.rs  agent_tools_napi.rs  chat.rs  config.rs  graph.rs  indexer.rs  lib.rs  main.rs  project.rs  serve.rs  types.rs
native/src/indexer/: classifier.rs  common.rs  document.rs  folder.rs  languages.rs  package_json.rs  pdf.rs
native/src/indexer/languages/: java.rs  markdown.rs  python.rs  rust.rs  typescript.rs
native/src/storage/: db.rs  embed.rs  embed_local.rs  ingest.rs  mod.rs  napi_bindings.rs  ppr.rs  query.rs  store.rs  text.rs  types_registry.rs
native/src/storage/backends/: mod.rs  neo4j.rs
native/src/vis/: ug-vis.bundle.js  visualization.html
native/tests/: graph_test.rs  indexer_test.rs  neo4j_smoke.rs  neo4j_write_smoke.rs  pdf_indexer_test.rs  rust_indexer_test.rs  search_test.rs  storage_bench.rs  storage_test.rs
native/tests/fixtures/: README.md
node/: cli.cjs  cli.mjs  mcp-server.mjs  project.cjs  test-runner.cjs
node/ug-mcp-skill/: SKILL.md
scripts/: copy-wrappers.mjs  make-latin1-pdf.mjs  release.sh
src/: cli.cjs  index.ts  mcp-server.mjs  test-indexer.test.ts  test-runner.cjs
src/mcp/: mcp-server.mjs
src/test/: test-runner.cjs  ts-test-indexing.ts
src/vis/: graph.json  visualization-how-to.md  visualization.html  visualization.md
