[package]
name = "ultragraph-kb"
version = "0.1.0"
edition = "2021"
authors = ["Aldrick Wan"]
description = "High-Performance Knowledge Base Indexer"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ug"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
napi = { version = "3", features = ["napi6", "tokio_rt"] }
napi-build = "1"
napi-derive = "3"
rayon = "1.10"
ignore = "0.4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
tree-sitter-md = "0.1"
petgraph = "0.6"
regex = "1"
overgraph = { path = "../docs/overgraph", version = "0.6" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
napi-build = "1"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"

[profile.dev-fast]
inherits = "release"
lto = false
codegen-units = 256
opt-level = 1
debug = false
