[package]
name = "ultragraph"
version = "0.1.5"
edition = "2021"
authors = ["Aldrick Wan"]
description = "High-Performance Graph-Based Knowledge Base Generator & Visualizer"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ug"
path = "src/main.rs"

[[bin]]
name = "ug-app"
path = "src/bin/ug_app.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
napi = { version = "3", features = ["napi6", "tokio_rt"] }
napi-build = "1"
napi-derive = "3"
rayon = "1.10"
ignore = "0.4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
tree-sitter-md = "0.1"
tree-sitter-rust = "0.20"
petgraph = "0.6"
regex = "1"
overgraph = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
futures = "0.3"
async-trait = "0.1"
neo4rs = "0.8"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
dirs = "5"
axum = "0.7"
tower-http = { version = "0.5", features = ["compression-br", "compression-gzip", "trace"] }
flate2 = "1"
brotli = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tauri = "2"
url = "2"

# default features pull in tesseract-rs's `build-tesseract`, which compiles
# Tesseract+Leptonica from source via cmake at `cargo build` time (network +
# several minutes). We don't need OCR — office/pdf text extraction works
# without it — so default features stay off.
liteparse = { version = "2.5.1", default-features = false }

[build-dependencies]
napi-build = "1"
tauri-build = "2"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"

[profile.dev-fast]
inherits = "release"
lto = false
codegen-units = 256
opt-level = 1
debug = false
